syntax = "proto3";

// TODO (lindvv): remove v2 suffix
package ai.lzy.v1.channel.v2;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/channel/v2/channel.proto";
import "ai/lzy/v1/long-running/operation.proto";
import "ai/lzy/v1/long-running/option.proto";

option java_outer_classname = "LCMPS";
option java_package = "ai.lzy.v1.channel.v2";

service LzyChannelManagerPrivate {
  rpc Create (ChannelCreateRequest) returns (ChannelCreateResponse);

  rpc Destroy (ChannelDestroyRequest) returns (Operation) {
    option (ai.lzy.v1.operation) = {
      response: "ChannelDestroyResponse"
      metadata: "ChannelDestroyMetadata"
    };
  }

  rpc DestroyAll (ChannelDestroyAllRequest) returns (Operation) {
    option (ai.lzy.v1.operation) = {
      response: "ChannelDestroyAllResponse"
      metadata: "ChannelDestroyAllMetadata"
    };
  }

  rpc Status (ChannelStatusRequest) returns (ChannelStatusResponse);

  rpc StatusAll (ChannelStatusAllRequest) returns (ChannelStatusAllResponse);
}

message ChannelCreateRequest {
  ChannelSpec channelSpec = 1;
  string executionId = 2;
}

message ChannelCreateResponse {
  string channelId = 1;
}

message ChannelDestroyRequest {
  string channelId = 1;
}

message ChannelDestroyResponse {}

message ChannelDestroyMetadata {}

message ChannelDestroyAllRequest {
  string executionId = 1;
}

message ChannelDestroyAllResponse {}

message ChannelDestroyAllMetadata {}

message ChannelStatusRequest {
  string channelId = 1;
}

message ChannelStatus {
  Channel channel = 1;
}

message ChannelStatusResponse {
  ChannelStatus status = 1;
}

message ChannelStatusAllRequest {
  string executionId = 1;
}

message ChannelStatusAllResponse {
  repeated ChannelStatus statuses = 1;
}
